# whisper-audio-gui

./: .gitignore  .project  LICENSE  README.md  pyproject.toml
src/: main.py
src/infrastructure/: audio_to_text.py  thread_worker.py
src/presentation/view/: audio_text_controls.py  media_player_main.py  player.py
whisper-gui/: .gitignore  .project  pyproject.toml  setup.cfg
whisper-gui/src/: main.py
whisper-gui/src/infrastructure/: audio_to_text.py  thread_worker.py
whisper-gui/src/presentation/: main_window.py
