[metadata]
name = my_package
version = 0.1.0
author = Kevin James
author_email = krjii@indyhustles.com
description = "Audio to Text Processing"
long_description = "Audio to text processing"
keywords = one, two
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.11
install_requires =
    whisper

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf =
    ReportLab>=1.2
    RXP
rest =
    docutils>=0.3

[options.packages.find]
where = src
exclude =
    examples*
    tools*
    docs*
